Adaptive pages + preparation for the defense.

--- a/templates/auth/mails/email_confirmation.html
+++ b/templates/auth/mails/email_confirmation.html
@@ -1,3 +1,3 @@
-<h5>Вітаємо з реєстрацією!</h5>
-<p>Будь-ласка, перейдіть по наступному посиланню для активації профіля:</p>
+<h4>Вітаємо з реєстрацією на {{ config.get('SERVER_NAME') }}!</h4>
+<p>Будь-ласка, перейдіть по наступному посиланню для активації профіля {{ profile_name }}:</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
