--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -2,7 +2,7 @@
 {{ super() }}
 {% block title %}Зв'язатися з нами{% endblock %}
 {% block content %}
-    <div class="mx-auto mb-3 col-12 col-lg-8">
+    <div class="mx-auto mb-3 col-12 col-md-11 col-lg-10 col-xl-9 col-xxl-8">
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Наші контакти:</h5>
