--- a/templates/posts/posts_response.html
+++ b/templates/posts/posts_response.html
@@ -1,4 +1,4 @@
-<div class="mx-auto row-cols-xl-2 row-cols-1 row g-3 mb-3">
+<div class="mx-auto row-cols-xxl-2 row-cols-1 row g-3 mb-3">
     {% for post in posts %}
         <div class="col">
             <div class="card hover-shadow h-100">
