--- a/templates/auth/mails/forgot_password.html
+++ b/templates/auth/mails/forgot_password.html
@@ -1,3 +1,3 @@
-<h5>Відновлення профіля на KIShop</h5>
+<h4>Відновлення профіля {{ profile_name }} на {{ config.get('SERVER_NAME') }}</h4>
 <p>Будь-ласка, перейдіть по наступному посиланню щоб відновити пароль:</p>
 <p><a href="{{ change_url }}">{{ change_url }}</a></p>
