--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -2,7 +2,7 @@
 {{ super() }}
 {% block title %}Index{% endblock %}
 {% block content %}
-    <div class="mx-auto col-4">
+    <div class="mx-auto col-xxl-5 col-xl-7 col-lg-9 col-md-11 col-sm-12">
         <h1 class="display-6">Реєстрація</h1>
         <form method="post">
             {{ form.hidden_tag() }}
