--- a/templates/basket/order_info.html
+++ b/templates/basket/order_info.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='script/basket.js') }}" defer></script>
 {% endblock %}
 {% block content %}
-    <div class="col-6 mx-auto">
+    <div class="mx-auto col-xxl-7 col-xl-8 col-lg-9 col-md-11 col-sm-12">
         <div class="card">
             <div class="card-body">
                 <div>
