--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -2,7 +2,7 @@
 {{ super() }}
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
-    <div class="col-12 col-md-10 col-xl-8 mx-auto">
+    <div class="col-12 col-md-11 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
         <div class="mb-3">
             <div class="card">
                 {% if post.picture %}
