Some fixes and improvements.

--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -22,7 +22,7 @@
             <th><a class="btn btn-success" href="{{ url_for('.product') }}">➕</a></th>
         </tr>
         <tr>
-            <form>
+            <form id="search_form">
                 <th></th>
                 <th><input name="id" type="text"></th>
                 <th></th>
