--- a/templates/shared/script.html
+++ b/templates/shared/script.html
@@ -1,2 +1,3 @@
 <script type="text/javascript" src="{{ url_for('static', filename='bootstrap/bootstrap.bundle.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='script/script.js') }}" defer></script>
+<script type="text/javascript" src="{{ url_for('static', filename='script/basket.js') }}" defer></script>
