--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -10,7 +10,7 @@
             {{ form.email.label }} {{ form.email(class_="form-control mb-3") }}
             {{ form.password.label }} {{ form.password(class_="form-control mb-2") }}
             {{ form.confirm_password.label }} {{ form.confirm_password(class_="form-control mb-5") }}
-            {{ form.phone.label }} {{ form.phone(class_="form-control mb-3") }}
+            {{ form.phone.label }} {{ form.phone(class_="form-control mb-3", placeholder='+380XXXXXXXXX', pattern='^\+?3?8?(0\d{9})$') }}
             {{ form.firstname.label }} {{ form.firstname(class_="form-control mb-3") }}
             {{ form.settlement.label }} {{ form.settlement(class_="form-control mb-3") }}
             {{ form.address.label }} {{ form.address(class_="form-control mb-2") }}
