Ultralast heroku commit.

--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -84,6 +84,7 @@
 </div>
 <footer class="text-center p-0 bg-light text-muted border-top mt-3">
     <div class="text-center bg-light m-0 p-2">
+        <div>Stack: Flask/PostgreSQL/Bootstrap 5</div>
         ©
         <a href="https://t.me/denyskalinovskyi" class="text-reset">Denys Kalinovskyi</a>
     </div>
