--- a/static/style/user_style.css
+++ b/static/style/user_style.css
@@ -33,3 +33,9 @@
     color: black;
     text-decoration: underline lightgray;
 }
+
+#ajax-content.disabled {
+    background: lightgray !important;
+    color: lightgray !important;
+    cursor: progress;
+}
