--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -82,7 +82,7 @@
                         {% else %}
                             ₴{{ product.price }}
                         {% endif %}
-                        <a class="btn btn-success float-end col-12 col-md-4 mb-3 {{ 'disabled' if not product.in_stock() }}" onmousedown="addToBasket({{ product.id }})">Додати у корзину</a>
+                        <a class="btn btn-success float-end col-12 col-md-4 mb-3 {{ 'disabled' if not product.in_stock() }}" onmousedown="addToCart({{ product.id }})">Додати у корзину</a>
                     </p>
                 </div>
             </div>
